deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iap-app-test
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iap-app-test
  template:
    metadata:
      labels:
        app: iap-app-test
    spec:
#     serviceAccountName: clean-cut-ksa
#     nodeSelector:
#       iam.gke.io/gke-metadata-server-enabled: "true"
      containers:
      - name: iap-app-test
        image: eu.gcr.io/test-hellotwin/web-image-043:634a84d
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "128Mi"
            cpu: "200m"
        ports:
        - containerPort: 8080
          protocol: TCP
