cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: cluster-ip-test
  namespace: default
  annotations:
    beta.cloud.google.com/backend-config: '{"default": "backend-config"}'  
spec:
  selector:
    app: iap-app-test
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
