node-port.yml
apiVersion: v1
kind: Service
metadata:
  name: clean-cut-service
  namespace: default
  annotations:
    beta.cloud.google.com/backend-config: '{"default": "config-default"}'
spec:
  type: NodePort
  selector:
    run: web-server
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
