ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
  annotations:
    kubernetes.io/ingress.global-static-ip-name: main-static-ip
    networking.gke.io/managed-certificates: certificate-test
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/v1beta2.FrontendConfig: "frontend-config"
    kubernetes.io/ingress.allow-http: "true"

spec:
  defaultBackend:
    service:
      name: cluster-ip-test
      port:
        number: 8080
  rules:
    - host: olekhnovich.of.by
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: cluster-ip-test
                port: 
                  number: 8080
